<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/characterStatBlock">

    <TextView
        android:id="@+id/characterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameDefault"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/statBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:columnCount="10"
        android:rowCount="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterDescription">

        <TextView
            android:id="@+id/baseTitle"
            android:layout_columnSpan="2"
            android:text="@string/baseTitle"
            android:layout_column="0"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/activeTitle"
            android:layout_columnSpan="2"
            android:text="@string/activeTitle"
            android:layout_column="2"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/attackTitle"
            android:layout_columnSpan="2"
            android:text="@string/attackTitle"
            android:layout_column="4"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/statisticsTitle"
            android:layout_columnSpan="2"
            android:text="@string/statisticsTitle"
            android:layout_column="6"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/incrementTitle"
            android:layout_columnSpan="2"
            android:text="@string/incrementsTitle"
            android:layout_column="8"
            android:layout_row="0"
            />

        <TextView
            android:id="@+id/strengthTitle"
            android:text="@string/strengthTitle"
            android:layout_column="0"
            android:layout_row="1"/>

        <EditText
            android:id="@+id/strengthView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/defaultNumber"
            android:maxLines="1"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/muscleTitle"
            android:text="@string/muscleTitle"
            android:layout_column="2"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/muscleView"
            android:text="@string/defaultNumber"
            android:layout_column="3"
            android:layout_row="1"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/strengthAttackTitle"
            android:text="@string/strengthTitle"
            android:layout_column="4"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/strengthAttackView"
            android:text="@string/defaultNumber"
            android:layout_column="5"
            android:layout_row="1"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/healthTitle"
            android:text="@string/healthTitle"
            android:layout_column="6"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/healthView"
            android:text="@string/defaultNumber"
            android:layout_column="7"
            android:layout_row="1"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/healthIncrementTitle"
            android:text="@string/hpIncTitle"
            android:layout_column="8"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/healthIncrementView"
            android:text="@string/defaultNumber"
            android:layout_column="9"
            android:layout_row="1"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/agilityTitle"
            android:text="@string/agilityTitle"
            android:layout_column="0"
            android:layout_row="2"/>

        <EditText
            android:id="@+id/agilityView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:text="@string/defaultNumber"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/dexterityTitle"
            android:text="@string/dexterityTitle"
            android:layout_column="2"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/dexterityView"
            android:text="@string/defaultNumber"
            android:layout_column="3"
            android:layout_row="2"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/agilityAttackTitle"
            android:text="@string/agilityTitle"
            android:layout_column="4"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/agilityAttackView"
            android:text="@string/defaultNumber"
            android:layout_column="5"
            android:layout_row="2"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/staminaTitle"
            android:text="@string/staminaTitle"
            android:layout_column="6"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/staminaView"
            android:text="@string/defaultNumber"
            android:layout_column="7"
            android:layout_row="2"
            android:tag="@string/numberTag" />

        <TextView
            android:id="@+id/staminaIncrementTitle"
            android:text="@string/stIncTitle"
            android:layout_column="8"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/staminaIncrementView"
            android:text="@string/defaultNumber"
            android:layout_column="9"
            android:layout_row="2"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/spiritTitle"
            android:text="@string/spiritTitle"
            android:layout_column="0"
            android:layout_row="3"/>

        <EditText
            android:id="@+id/spiritView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:text="@string/defaultNumber"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/auraTitle"
            android:text="@string/auraTitle"
            android:layout_column="2"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/auraView"
            android:text="@string/defaultNumber"
            android:layout_column="3"
            android:layout_row="3"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/spiritAttackTitle"
            android:text="@string/spiritTitle"
            android:layout_column="4"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/spiritAttackView"
            android:text="@string/defaultNumber"
            android:layout_column="5"
            android:layout_row="3"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/defenseTitle"
            android:text="@string/defenseTitle"
            android:layout_column="6"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/defenseView"
            android:text="@string/defaultNumber"
            android:layout_column="7"
            android:layout_row="3"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/criticalHealthTitle"
            android:text="@string/criticalHealthTitle"
            android:layout_column="8"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/criticalHealthView"
            android:text="@string/defaultNumber"
            android:layout_column="9"
            android:layout_row="3"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/mindTitle"
            android:text="@string/mindTitle"
            android:layout_column="0"
            android:layout_row="4"/>

        <EditText
            android:id="@+id/mindView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:text="@string/defaultNumber"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/intuitionTitle"
            android:text="@string/intuitionTitle"
            android:layout_column="2"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/intuitionView"
            android:text="@string/defaultNumber"
            android:layout_column="3"
            android:layout_row="4"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/mindAttackTitle"
            android:text="@string/mindTitle"
            android:layout_column="4"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/mindAttackView"
            android:text="@string/defaultNumber"
            android:layout_column="5"
            android:layout_row="4"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/resistanceTitle"
            android:text="@string/resistanceTitle"
            android:layout_column="6"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/resistanceView"
            android:text="@string/defaultNumber"
            android:layout_column="7"
            android:layout_row="4"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/damageIncTitle"
            android:text="@string/damage_incTitle"
            android:layout_column="8"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/damageIncView"
            android:text="@string/defaultNumber"
            android:layout_column="9"
            android:layout_row="4"
            android:tag="@string/numberTag"
            />

        <TextView
            android:id="@+id/gutsTitle"
            android:text="@string/gutsTitle"
            android:layout_column="0"
            android:layout_row="5"/>

        <EditText
            android:id="@+id/gutsView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:text="@string/defaultNumber"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/resolveTitle"
            android:text="@string/resolveTitle"
            android:layout_column="2"
            android:layout_row="5"/>

        <TextView
            android:id="@+id/resolveView"
            android:text="@string/defaultNumber"
            android:layout_column="3"
            android:layout_row="5"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/gutsAttackTitle"
            android:text=""
            android:layout_column="4"
            android:layout_row="5"/>

        <TextView
            android:id="@+id/speedTitle"
            android:text="@string/speedTitle"
            android:layout_column="6"
            android:layout_row="5" />

        <TextView
            android:id="@+id/speedView"
            android:text="@string/defaultNumber"
            android:layout_column="7"
            android:layout_row="5"
            android:tag="@string/numberTag"/>

        <TextView
            android:id="@+id/initiativeTitle"
            android:text="@string/initiativeTitle"
            android:layout_column="8"
            android:layout_row="5"/>

        <TextView
            android:id="@+id/initiativeView"
            android:text="@string/defaultNumber"
            android:layout_column="9"
            android:layout_row="5"
            android:tag="@string/numberTag"/>

    </GridLayout>

    <TextView
        android:id="@+id/characterDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_and_levelDefault"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/characterName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>